{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 370,
  "lineage": "b7d126e8-86a3-38ed-4a00-cce27588f52a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chow3_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff60325a4315e611",
            "arn": "arn:aws:ec2:us-east-1:853973692277:elastic-ip/eipalloc-0ff60325a4315e611",
            "domain": "vpc",
            "id": "eipalloc-0ff60325a4315e611",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-212-226.compute-1.amazonaws.com",
            "public_ip": "52.21.212.226",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-nat-eip"
            },
            "tags_all": {
              "Name": "chow3-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chow3_flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-0529a2f4f1d7bbdce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0529a2f4f1d7bbdce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ssh_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051d33320a83585ce"
              }
            ],
            "primary_network_interface_id": "eni-051d33320a83585ce",
            "private_dns": "ip-10-0-1-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_ip": "13.218.191.198",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:853973692277:key/19008ab6-3d44-4b37-9c2b-bdcc09df76b1",
                "throughput": 0,
                "volume_id": "vol-007a966d5d97653f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b392fd339c5e38b0",
            "tags": {
              "Name": "chow3-flask",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tags_all": {
              "Name": "chow3-flask",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050c042ca7b2916f4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "i-0529a2f4f1d7bbdce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.chow3_mysql",
            "aws_security_group.chow3_db_sg",
            "aws_security_group.chow3_flask_sg",
            "aws_security_group.chow3_nginx_sg",
            "aws_subnet.chow3_public_subnet",
            "aws_vpc.chow3_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_key_pair.mgn_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chow3_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-002a09fbe165cec55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002a09fbe165cec55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ssh_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a9c75506faf95c9e"
              }
            ],
            "primary_network_interface_id": "eni-0a9c75506faf95c9e",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_ip": "52.205.177.47",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:853973692277:key/19008ab6-3d44-4b37-9c2b-bdcc09df76b1",
                "throughput": 0,
                "volume_id": "vol-02c67e2eb65c03b14",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b392fd339c5e38b0",
            "tags": {
              "Name": "chow3-mysql",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tags_all": {
              "Name": "chow3-mysql",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd9c3fe44c653e3d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "i-002a09fbe165cec55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chow3_db_sg",
            "aws_security_group.chow3_flask_sg",
            "aws_security_group.chow3_nginx_sg",
            "aws_subnet.chow3_public_subnet",
            "aws_vpc.chow3_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_key_pair.mgn_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chow3_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-0e37f0408da199640",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mgn-instance-profile",
            "id": "i-0e37f0408da199640",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ssh_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0417d4be9a75d7f2a"
              }
            ],
            "primary_network_interface_id": "eni-0417d4be9a75d7f2a",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_ip": "54.87.32.166",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:853973692277:key/19008ab6-3d44-4b37-9c2b-bdcc09df76b1",
                "throughput": 0,
                "volume_id": "vol-03ae65cdc04f8b93d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b392fd339c5e38b0",
            "tags": {
              "Name": "chow3-nginx",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tags_all": {
              "Name": "chow3-nginx",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0723abc724ac57a56"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "i-0e37f0408da199640",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.mgn_profile",
            "aws_instance.chow3_flask",
            "aws_instance.chow3_mysql",
            "aws_security_group.chow3_db_sg",
            "aws_security_group.chow3_flask_sg",
            "aws_security_group.chow3_nginx_sg",
            "aws_subnet.chow3_public_subnet",
            "aws_vpc.chow3_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_iam_role.aws-ec2-mgn",
            "data.aws_key_pair.mgn_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chow3_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:internet-gateway/igw-07775bd69a553c59a",
            "id": "igw-07775bd69a553c59a",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-igw"
            },
            "tags_all": {
              "Name": "chow3-igw"
            },
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chow3_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff60325a4315e611",
            "association_id": "eipassoc-0d58ffde5e17f68bc",
            "connectivity_type": "public",
            "id": "nat-014f5219110d2000e",
            "network_interface_id": "eni-0b7b1ef86a2f06126",
            "private_ip": "10.0.1.14",
            "public_ip": "52.21.212.226",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b392fd339c5e38b0",
            "tags": {
              "Name": "chow3-nat-gw",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tags_all": {
              "Name": "chow3-nat-gw",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.chow3_nat_eip",
            "aws_subnet.chow3_public_subnet",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chow3_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f9a1fb182b2b3c841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-014f5219110d2000e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9a1fb182b2b3c84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f9a1fb182b2b3c84"
          },
          "dependencies": [
            "aws_eip.chow3_nat_eip",
            "aws_nat_gateway.chow3_nat_gw",
            "aws_route_table.chow3_private_rt",
            "aws_subnet.chow3_public_subnet",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chow3_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07775bd69a553c59a",
            "id": "r-rtb-0692a2ff516a732f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0692a2ff516a732f2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0692a2ff516a732f2"
          },
          "dependencies": [
            "aws_internet_gateway.chow3_igw",
            "aws_route_table.chow3_public_rt",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chow3_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:route-table/rtb-0f9a1fb182b2b3c84",
            "id": "rtb-0f9a1fb182b2b3c84",
            "owner_id": "853973692277",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "chow3-private-rt"
            },
            "tags_all": {
              "Name": "chow3-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "rtb-0f9a1fb182b2b3c84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chow3_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:route-table/rtb-0692a2ff516a732f2",
            "id": "rtb-0692a2ff516a732f2",
            "owner_id": "853973692277",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "chow3-public-rt"
            },
            "tags_all": {
              "Name": "chow3-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "rtb-0692a2ff516a732f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chow3_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f725a63e7766fd",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9a1fb182b2b3c84",
            "subnet_id": "subnet-06ee49208db1c12cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chow3_private_rt",
            "aws_subnet.chow3_private_subnet",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chow3_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e02603b15e80b19",
            "region": "us-east-1",
            "route_table_id": "rtb-0692a2ff516a732f2",
            "subnet_id": "subnet-0b392fd339c5e38b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chow3_public_rt",
            "aws_subnet.chow3_public_subnet",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chow3_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-0cd9c3fe44c653e3d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd9c3fe44c653e3d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050c042ca7b2916f4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050c042ca7b2916f4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20251128050954033900000005",
            "name_prefix": "terraform-",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chow3-db-sg",
              "createdby": "chowdris@presidio.com"
            },
            "tags_all": {
              "Name": "chow3-db-sg",
              "createdby": "chowdris@presidio.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "sg-0cd9c3fe44c653e3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chow3_flask_sg",
            "aws_security_group.chow3_nginx_sg",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chow3_flask_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-050c042ca7b2916f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050c042ca7b2916f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "202.83.25.24/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0723abc724ac57a56"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251128050950209700000004",
            "name_prefix": "terraform-",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chow3-flask-sg"
            },
            "tags_all": {
              "Name": "chow3-flask-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "sg-050c042ca7b2916f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chow3_nginx_sg",
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chow3_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-0723abc724ac57a56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0723abc724ac57a56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "202.83.25.24/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251128050945765100000003",
            "name_prefix": "terraform-",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chow3-nginx-sg"
            },
            "tags_all": {
              "Name": "chow3-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "sg-0723abc724ac57a56",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chow3_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-06ee49208db1c12cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ee49208db1c12cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-private-subnet"
            },
            "tags_all": {
              "Name": "chow3-private-subnet"
            },
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "subnet-06ee49208db1c12cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chow3_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-0b392fd339c5e38b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b392fd339c5e38b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-public-subnet",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "tags_all": {
              "Name": "chow3-public-subnet",
              "createdby": "chowdris@presidio.com",
              "modifiedby": "chowdris@presidio.com"
            },
            "vpc_id": "vpc-042748477f8a690e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "subnet-0b392fd339c5e38b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chow3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:vpc/vpc-042748477f8a690e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018a2eb995657e33f",
            "default_route_table_id": "rtb-0e46826da26c601a1",
            "default_security_group_id": "sg-0bf828f597fc432d4",
            "dhcp_options_id": "dopt-00956455b1342abe4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042748477f8a690e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e46826da26c601a1",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-vpc"
            },
            "tags_all": {
              "Name": "chow3-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "vpc-042748477f8a690e0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}